--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -72,9 +72,10 @@ spec:
           workspace: pipeline-workspace
       taskRef:
         name: buildah
+        kind: ClusterTask
       params:
       - name: IMAGE
         value: "$(params.build-image)"
       runAfter:
         - tests
-        - lint 
+        - lint
